[package]
name = "initramfs"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "parser / decoder and encoder of the initramfs (initial ramfs)"
documentation = "https://docs.rs/initramfs"
keywords = ["initramfs"]
categories = ["no-std"]
license = "MIT OR Apache-2.0"

[dependencies]
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
log = "0.4.17"
env_logger = { version = "0.9.0", optional = true }

[features]
default = ["std"]
std = ["env_logger"]
